[FLINK-15743][docs] Extend Flink 1.10 release notes