@@ -73,6 +73,11 @@ start on YARN. This option has been deprecated since the introduction of
 [FLIP-6](https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=65147077).
 All Flink users are advised to remove this command line option.
 
+#### Removal of --yst/--yarnstreaming Command Line Options ([FLINK-14957](https://issues.apache.org/jira/browse/FLINK-14957))
+The Flink CLI no longer supports the deprecated command line options
+`-yst/--yarnstreaming`, which were used to disable eager pre-allocation of memory.
+All Flink users are advised to remove this command line option.
+
 #### Mesos Integration will reject expired Offers faster ([FLINK-14029](https://issues.apache.org/jira/browse/FLINK-14029))
 Flink's Mesos integration now rejects all expired offers instead of only 4.
 This improves the situation where Fenzo holds on to a lot of expired offers
@@ -80,9 +85,61 @@ without giving them back to the Mesos resource manager.
 
 #### Scheduler Rearchitecture ([FLINK-14651](https://issues.apache.org/jira/browse/FLINK-14651))
 Flink's scheduler was refactored with the goal of making scheduling strategies
-customizable in the future. Users that experience issues related to scheduling
-can fallback to the legacy scheduler by setting `jobmanager.scheduler: legacy`
-in their `flink-conf.yaml`.
+customizable in the future. Using the legacy scheduler is discouraged as it will
+be removed in a future release. However, users that experience issues related to
+scheduling can fallback to the legacy scheduler by setting
+`jobmanager.scheduler` to `legacy` in their `flink-conf.yaml` for the time
+being. Note, however, that using the legacy scheduler with the [Pipelined Region
+Failover Strategy]({{ site.baseurl
+}}/dev/task_failure_recovery.html#restart-pipelined-region-failover-strategy)
+enabled has the following caveats:
+
+* Exceptions that caused a job to restart will not be shown on the job overview page of the Web UI ([FLINK-15917](https://issues.apache.org/jira/browse/FLINK-15917)).
+However, exceptions that cause a job to fail (e.g., when all restart attempts exhausted) will still be shown.
+* The `uptime` metric will not be reset after restarting a job due to task failure ([FLINK-15918](https://issues.apache.org/jira/browse/FLINK-15918)).
+
+Note that in the default `flink-conf.yaml`, the Pipelined Region Failover
+Strategy is already enabled. That is, users that want to use the legacy
+scheduler and cannot accept aforementioned caveats should make sure that
+`jobmanager.execution.failover-strategy` is set to `full` or not set at all.
+
+#### Java 11 Support ([FLINK-10725](https://issues.apache.org/jira/browse/FLINK-10725))
+Beginning from this release, Flink can be compiled and run with Java 11. All
+Java 8 artifacts can be also used with Java 11. This means that users that want
+to run Flink with Java 11 do not have to compile Flink themselves.
+
+When starting Flink with Java 11, the following warnings may be logged:
+
+    WARNING: An illegal reflective access operation has occurred
+    WARNING: Illegal reflective access by org.apache.flink.core.memory.MemoryUtils (file:/opt/flink/flink-1.10.0/lib/flink-dist_2.11-1.10.0.jar) to constructor java.nio.DirectByteBuffer(long,int)
+    WARNING: Please consider reporting this to the maintainers of org.apache.flink.core.memory.MemoryUtils
+    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+    WARNING: All illegal access operations will be denied in a future release
+
+    WARNING: An illegal reflective access operation has occurred
+    WARNING: Illegal reflective access by org.apache.flink.api.java.ClosureCleaner (file:/home/flinkuser/.m2/repository/org/apache/flink/flink-core/1.10.0/flink-core-1.10.0.jar) to field java.lang.String.value
+    WARNING: Please consider reporting this to the maintainers of org.apache.flink.api.java.ClosureCleaner
+    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+    WARNING: All illegal access operations will be denied in a future release
+
+    WARNING: An illegal reflective access operation has occurred
+    WARNING: Illegal reflective access by org.jboss.netty.util.internal.ByteBufferUtil (file:/home/flinkuser/.m2/repository/io/netty/netty/3.10.6.Final/netty-3.10.6.Final.jar) to method java.nio.DirectByteBuffer.cleaner()
+    WARNING: Please consider reporting this to the maintainers of org.jboss.netty.util.internal.ByteBufferUtil
+    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+    WARNING: All illegal access operations will be denied in a future release
+
+    WARNING: An illegal reflective access operation has occurred
+    WARNING: Illegal reflective access by com.esotericsoftware.kryo.util.UnsafeUtil (file:/home/flinkuser/.m2/repository/com/esotericsoftware/kryo/kryo/2.24.0/kryo-2.24.0.jar) to constructor java.nio.DirectByteBuffer(long,int,java.lang.Object)
+    WARNING: Please consider reporting this to the maintainers of com.esotericsoftware.kryo.util.UnsafeUtil
+    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+    WARNING: All illegal access operations will be denied in a future release
+
+These warnings are considered harmless and will be addressed in future Flink
+releases.
+
+Lastly, note that the connectors for Cassandra, Hive, HBase, and Kafka 0.8--0.11
+have not been tested with Java 11 because the respective projects did not
+provide Java 11 support at the time of the Flink 1.10.0 release.
 
 
 ### Memory Management
@@ -177,6 +234,18 @@ maintain backwards compatibility where it makes sense:
 The container cut-off configuration options, `containerized.heap-cutoff-ratio`
 and `containerized.heap-cutoff-min`, have no effect for task executor processes
 anymore but they still have the same semantics for the JobManager process.
+
+#### RocksDB State Backend Memory Control ([FLINK-7289](https://issues.apache.org/jira/browse/FLINK-7289))
+Together with the introduction of the [new Task Executor Memory
+Model](#new-task-executor-memory-model-flink-13980), the memory consumption of the RocksDB state backend will be
+limited by the total amount of Flink Managed Memory, which can be configured via
+`taskmanager.memory.managed.size` or `taskmanager.memory.managed.fraction`.
+Furthermore, users can tune RocksDB's write/read memory ratio
+(`state.backend.rocksdb.memory.write-buffer-ratio`, by default `0.5`) and the
+reserved memory fraction for indices/filters
+(`state.backend.rocksdb.memory.high-prio-pool-ratio`, by default `0.1`). More
+details and advanced configuration options can be found in the [Flink user
+documentation]({{ site.baseurl }}/ops/state/large_state_tuning.html#tuning-rocksdb-memory).
 
 #### Fine-grained Operator Resource Management ([FLINK-14058](https://issues.apache.org/jira/browse/FLINK-14058))
 Config options `table.exec.resource.external-buffer-memory`,
@@ -296,6 +365,11 @@ in `flink-conf.yaml` to restore the old behavior.
 `StateTtlConfig#TimeCharacteristic` has been removed in favor of
 `StateTtlConfig#TtlTimeCharacteristic`.
 
+#### New efficient Method to check if MapState is empty ([FLINK-13034](https://issues.apache.org/jira/browse/FLINK-13034))
+We have added a new method `MapState#isEmpty()` which enables users to check
+whether a map state is empty. The new method is 40% faster than
+`mapState.keys().iterator().hasNext()` when using the RocksDB state backend.
+
 #### RocksDB Upgrade ([FLINK-14483](https://issues.apache.org/jira/browse/FLINK-14483))
 We have again released our own RocksDB build (FRocksDB) which is based on
 RocksDB version 5.17.2 with several feature backports for the [Write Buffer
@@ -304,6 +378,13 @@ enable limiting RocksDB's memory usage. The decision to release our own
 RocksDB build was made because later RocksDB versions suffer from a
 [performance regression under certain
 workloads](https://github.com/facebook/rocksdb/issues/5774).
+
+#### RocksDB Logging disabled by default ([FLINK-15068](https://issues.apache.org/jira/browse/FLINK-15068))
+Logging in RocksDB (e.g., logging related to flush, compaction, memtable
+creation, etc.) has been disabled by default to prevent disk space from being
+filled up unexpectedly. Users that need to enable logging should implement their
+own `RocksDBOptionsFactory` that creates `DBOptions` instances with
+`InfoLogLevel` set to `INFO_LEVEL`.
 
 #### Improved RocksDB Savepoint Recovery ([FLINK-12785](https://issues.apache.org/jira/browse/FLINK-12785))
 In previous Flink releases users may encounter an `OutOfMemoryError` when
@@ -378,3 +459,8 @@ external thread). The methods `MailboxExecutor#yield()` or
 control to other actions temporarily, e.g., if the current operator is
 blocked. The `MailboxExecutor` can be accessed by using
 `YieldingOperatorFactory` (see `AsyncWaitOperator` for an example usage).
+
+#### Deprecation of OptionsFactory and ConfigurableOptionsFactory interfaces ([FLINK-14926](https://issues.apache.org/jira/browse/FLINK-14926))
+Interfaces `OptionsFactory` and `ConfigurableOptionsFactory` have been
+deprecated in favor of `RocksDBOptionsFactory` and
+`ConfigurableRocksDBOptionsFactory`, respectively.
